examples/0.2.3/FedRAMP_High-AllowList-SCP.md
| Service Prefix          | Service Name                                   |
|-------------------------|------------------------------------------------|
| access-analyzer         | IAM Access Analyzer                            |
| account                 | AWS Accounts                                   |
| acm                     | AWS Certificate Manager                        |
| apigateway              | Manage Amazon API Gateway                      |
| application-autoscaling | Application Auto Scaling                       |
| appstream               | Amazon AppStream 2.0                           |
| athena                  | Amazon Athena                                  |
| autoscaling             | Amazon EC2 Auto Scaling                        |
| autoscaling-plans       | AWS Auto Scaling                               |
| aws-portal              | AWS Billing                                    |
| batch                   | AWS Batch                                      |
| clouddirectory          | Amazon Cloud Directory                         |
| cloudformation          | AWS CloudFormation                             |
| cloudhsm                | AWS CloudHSM                                   |
| cloudtrail              | AWS CloudTrail                                 |
| cloudwatch              | Amazon CloudWatch                              |
| codebuild               | AWS CodeBuild                                  |
| codecommit              | AWS CodeCommit                                 |
| codedeploy              | AWS CodeDeploy                                 |
| comprehend              | Amazon Comprehend                              |
| config                  | AWS Config                                     |
| datasync                | DataSync                                       |
| directconnect           | AWS Direct Connect                             |
| dms                     | AWS Database Migration Service                 |
| ds                      | AWS Directory Service                          |
| dynamodb                | Amazon DynamoDB                                |
| ebs                     | Amazon Elastic Block Store                     |
| ec2                     | Amazon EC2                                     |
| ec2messages             | Amazon Message Delivery Service                |
| ecr                     | Amazon Elastic Container Registry              |
| ecs                     | Amazon Elastic Container Service               |
| elasticache             | Amazon ElastiCache                             |
| elasticbeanstalk        | AWS Elastic Beanstalk                          |
| elasticfilesystem       | Amazon Elastic File System                     |
| elasticloadbalancing    | Elastic Load Balancing V2                      |
| elasticmapreduce        | Amazon Elastic MapReduce                       |
| es                      | Amazon Elasticsearch Service                   |
| events                  | Amazon EventBridge                             |
| execute-api             | Amazon API Gateway                             |
| firehose                | Amazon Kinesis Firehose                        |
| glacier                 | Amazon Glacier                                 |
| glue                    | AWS Glue                                       |
| greengrass              | AWS IoT Greengrass                             |
| guardduty               | Amazon GuardDuty                               |
| iam                     | Identity And Access Management                 |
| importexport            | AWS Import Export Disk Service                 |
| inspector               | Amazon Inspector                               |
| iot                     | AWS IoT                                        |
| iot-device-tester       | AWS IoT Device Tester                          |
| iotdeviceadvisor        | AWS IoT Core Device Advisor                    |
| iotwireless             | AWS IoT Core for LoRaWAN                       |
| kinesis                 | Amazon Kinesis                                 |
| kms                     | AWS Key Management Service                     |
| lakeformation           | AWS Lake Formation                             |
| lambda                  | AWS Lambda                                     |
| license-manager         | AWS License Manager                            |
| logs                    | Amazon CloudWatch Logs                         |
| mediaconvert            | AWS Elemental MediaConvert                     |
| organizations           | AWS Organizations                              |
| polly                   | Amazon Polly                                   |
| rds                     | Amazon RDS                                     |
| rds-data                | Amazon RDS Data API                            |
| rds-db                  | Amazon RDS IAM Authentication                  |
| redshift                | Amazon Redshift                                |
| rekognition             | Amazon Rekognition                             |
| route53                 | Amazon Route 53                                |
| route53domains          | Amazon Route53 Domains                         |
| s3                      | Amazon S3                                      |
| sagemaker               | Amazon SageMaker                               |
| secretsmanager          | AWS Secrets Manager                            |
| serverlessrepo          | AWS Serverless Application Repository          |
| servicecatalog          | AWS Service Catalog                            |
| sms                     | AWS Server Migration Service                   |
| snowball                | AWS Snowball                                   |
| sns                     | Amazon SNS                                     |
| sqs                     | Amazon SQS                                     |
| ssm                     | AWS Systems Manager                            |
| ssmmessages             | Amazon Session Manager Message Gateway Service |
| states                  | AWS Step Functions                             |
| storagegateway          | Amazon Storage Gateway                         |
| sts                     | AWS Security Token Service                     |
| support                 | AWS Support                                    |
| swf                     | Amazon Simple Workflow Service                 |
| transcribe              | Amazon Transcribe                              |
| translate               | Amazon Translate                               |
| trustedadvisor          | AWS Trusted Advisor                            |
| waf                     | AWS WAF                                        |
| waf-regional            | AWS WAF Regional                               |
| wafv2                   | AWS WAF V2                                     |
| workspaces              | Amazon WorkSpaces                              |
